fixed overflow

--- a/src/components/ContactMe/contactme.scss
+++ b/src/components/ContactMe/contactme.scss
@@ -57,5 +57,6 @@ margin: 0 auto;
   .text-center{
     margin-left:30%;
     width: 100vw !important;
+    overflow: hidden;
     //display: flex;
   }
